Simplify rendering